Had to fix the collapsing margins

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
 }
 
 .mb-7 {
-  margin-bottom: 5rem!important;
+  margin-bottom: 10rem!important;
 }
 
 .mb-minus-9 {
